--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon">%</span>
-                  <input type="number" class="form-control" id="interest" placeholder="Interest">
+                  <input type="number" class="form-control" id="interest" placeholder="Interest Per Year">
                 </div>
               </div>
               <div class="form-group">
